--- a/src/ui/components/AppShared.layout.css
+++ b/src/ui/components/AppShared.layout.css
@@ -381,6 +381,18 @@
   display: block;
 }
 
+.aoMainAreaRequestsFill {
+  height: calc(100dvh - 108px);
+  min-height: 0;
+  display: flex;
+  flex-direction: column;
+}
+
+.aoMainAreaRequestsFill > * {
+  flex: 1 1 auto;
+  min-height: 0;
+}
+
 .aoSwitchDirsInline {
   display: grid;
   grid-template-columns: minmax(260px, 1fr) minmax(260px, 1fr);
